[package]
name = "worldclient"
version = "0.1.0"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[features]
default = [
    "rendy/vulkan-x11",
    "rendy/texture-image",
    "rendy/texture-palette",
]

[dependencies]
bitflags = "1.1"
env_logger = "0.6"
failure = "0.1"
gfx-hal = "0.3"
lazy_static = "1.4"
log = "0.4"
nalgebra = "0.18"
rendy = { git = "https://github.com/amethyst/rendy" }
