[package]
name = "eternalreckoning-core"
version = "0.1.2"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
fern = "0.5"
log = "0.4"
nalgebra = "0.18"
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
toml = "0.5"
tokio = "0.1"
uuid = "0.7"