[package]
name = "eternalreckoning-lobby"
version = "0.1.0"
description = "Lobby server for Eternal Reckoning"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[dependencies]
eternalreckoning-core = { version = "~0.2", path = "../core" }

actix-web = "1.0"
failure = "0.1"
fern = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
