[package]
name = "eternalreckoning-subscription"
version = "0.1.0"
description = "Subscription and auth server for Eternal Reckoning"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[features]
default = [
    "uuid/v4",
]

[dependencies]
eternalreckoning-core = { version = "~0.2", path = "../core" }

failure = "~0.1"
futures = "~0.1"
lapin = "~0.28"
log = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
uuid = "~0.7"
